#******************************************************************************
# Root CMake configuration file for naruto_apollo project
#
# Put here only sub-projects includes, global config options,
# target configuration, toolchain selection and so on.
#
# Copyright: dingjiangang 2022
# All Rights Reserved
#
# This file is part of NarutoApollo Application
# It is not a good case for this project, in the future, i will change it by a
# standard approach.
#******************************************************************************
cmake_minimum_required(VERSION 3.16)
project(naruto_apollo  VERSION 1.0.0 LANGUAGES C CXX ASM)

if(NOT WIN32)
  string(ASCII 27 Esc)
  set(ColourReset "${Esc}[m")
  set(ColourBold  "${Esc}[1m")
  set(Red         "${Esc}[31m")
  set(Green       "${Esc}[32m")
  set(Yellow      "${Esc}[33m")
  set(Blue        "${Esc}[34m")
  set(Magenta     "${Esc}[35m")
  set(Cyan        "${Esc}[36m")
  set(White       "${Esc}[37m")
  set(BoldRed     "${Esc}[1;31m")
  set(BoldGreen   "${Esc}[1;32m")
  set(BoldYellow  "${Esc}[1;33m")
  set(BoldBlue    "${Esc}[1;34m")
  set(BoldMagenta "${Esc}[1;35m")
  set(BoldCyan    "${Esc}[1;36m")
  set(BoldWhite   "${Esc}[1;37m")
endif()


message("${Green} [info] naruto_apollo cmakelist ${ColourReset}")
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17  -fPIC  -pthread -mavx -march=native ")
option(BUILD_SHARED_LIBS "build as shared library" ON)
include_directories(
    $ENV{NARUTO_APOLLO_ROOT}
    $ENV{NARUTO_APOLLO_ROOT}/modules/civetweb-1.11/include
)
include($ENV{TOOL_BASE_PATH}/../cmake/ProtoBuf.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/fastrtps.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/fastcdr.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/gflags.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/glog.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/eigen.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/abseil.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/tf2.cmake)
include($ENV{TOOL_BASE_PATH}/../cmake/json.cmake)
set(Python_INLCUDE_DIRS $ENV{TOOL_BASE_PATH}/Python-3.9.5/include/python3.9)
include_directories(${Python_INLCUDE_DIRS})

#system lib search
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
find_package(CUDA REQUIRED)


set(CyberCompile 1)
set(ModulesCompile 1)
#add_sub_modules here#====================to build cyber====================
if (${CyberCompile})
  add_subdirectory(cyber)
  add_subdirectory(cyber/service)
  add_subdirectory(cyber/task)
  add_subdirectory(cyber/message)
  add_subdirectory(cyber/data)
  add_subdirectory(cyber/blocker)
  add_subdirectory(cyber/mainboard)
  add_subdirectory(cyber/proto)
  add_subdirectory(cyber/component)
  add_subdirectory(cyber/python)
  add_subdirectory(cyber/sysmo)
  add_subdirectory(cyber/node)
  add_subdirectory(cyber/logger)
  add_subdirectory(cyber/tools)
  add_subdirectory(cyber/class_loader)
  add_subdirectory(cyber/base)
  add_subdirectory(cyber/transport)
  add_subdirectory(cyber/time)
  add_subdirectory(cyber/parameter)
  add_subdirectory(cyber/timer)
  add_subdirectory(cyber/service_discovery)
  add_subdirectory(cyber/event)
  add_subdirectory(cyber/common)
  add_subdirectory(cyber/scheduler)
  add_subdirectory(cyber/examples)
  add_subdirectory(cyber/record)
  add_subdirectory(cyber/croutine)
  add_subdirectory(cyber/io)
  add_subdirectory(cyber/python/cyber_py3)
  add_subdirectory(cyber/python/internal)
  add_subdirectory(cyber/python/cyber_py3/test)
  add_subdirectory(cyber/python/cyber_py3/examples)
  add_subdirectory(cyber/tools/cyber_launch)
  add_subdirectory(cyber/tools/cyber_service)
  add_subdirectory(cyber/tools/cyber_recorder)
  add_subdirectory(cyber/tools/cyber_channel)
  add_subdirectory(cyber/tools/cyber_node)
  add_subdirectory(cyber/tools/cyber_monitor)
  add_subdirectory(cyber/tools/cyber_recorder/player)
  add_subdirectory(cyber/class_loader/test)
  add_subdirectory(cyber/class_loader/utility)
  add_subdirectory(cyber/class_loader/shared_library)
  add_subdirectory(cyber/transport/receiver)
  add_subdirectory(cyber/transport/rtps)
  add_subdirectory(cyber/transport/message)
  add_subdirectory(cyber/transport/transmitter)
  add_subdirectory(cyber/transport/integration_test)
  add_subdirectory(cyber/transport/dispatcher)
  add_subdirectory(cyber/transport/qos)
  add_subdirectory(cyber/transport/common)
  add_subdirectory(cyber/transport/shm)
  add_subdirectory(cyber/service_discovery/communication)
  add_subdirectory(cyber/examples/common_component_example)
  add_subdirectory(cyber/examples/timer_component_example)
  add_subdirectory(cyber/examples/proto)
endif()
#====================to build apollo modules====================
if (${ModulesCompile})
  add_subdirectory(modules/control)
  add_subdirectory(modules/dreamview)
  add_subdirectory(modules/third_party_perception)
  add_subdirectory(modules/storytelling)
  add_subdirectory(modules/audio)
  add_subdirectory(modules/prediction)
  add_subdirectory(modules/map)
  add_subdirectory(modules/calibration)
  add_subdirectory(modules/v2x)
  add_subdirectory(modules/routing)
  add_subdirectory(modules/task_manager)
  add_subdirectory(modules/transform)
  add_subdirectory(modules/canbus)
  add_subdirectory(modules/localization)
  add_subdirectory(modules/tools)
  add_subdirectory(modules/bridge)
  add_subdirectory(modules/perception)
  add_subdirectory(modules/drivers)
  add_subdirectory(modules/common)
  add_subdirectory(modules/guardian)
  add_subdirectory(modules/monitor)
  add_subdirectory(modules/planning)
  add_subdirectory(modules/control/controller)
  add_subdirectory(modules/control/proto)
  add_subdirectory(modules/control/tools)
  add_subdirectory(modules/control/submodules)
  add_subdirectory(modules/control/common)
  add_subdirectory(modules/control/integration_tests)
  add_subdirectory(modules/dreamview/backend)
  add_subdirectory(modules/dreamview/proto)
  add_subdirectory(modules/dreamview/backend/map)
  add_subdirectory(modules/dreamview/backend/sim_control)
  add_subdirectory(modules/dreamview/backend/testdata)
  add_subdirectory(modules/dreamview/backend/perception_camera_updater)
  add_subdirectory(modules/dreamview/backend/teleop)
  add_subdirectory(modules/dreamview/backend/simulation_world)
  add_subdirectory(modules/dreamview/backend/common)
  add_subdirectory(modules/dreamview/backend/point_cloud)
  add_subdirectory(modules/dreamview/backend/handlers)
  add_subdirectory(modules/dreamview/backend/hmi)
  add_subdirectory(modules/dreamview/backend/fuel_monitor)
  add_subdirectory(modules/dreamview/backend/teleop/proto)
  add_subdirectory(modules/third_party_perception/proto)
  add_subdirectory(modules/third_party_perception/tools)
  add_subdirectory(modules/third_party_perception/common)
  add_subdirectory(modules/third_party_perception/integration_tests)
  add_subdirectory(modules/storytelling/story_tellers)
  add_subdirectory(modules/storytelling/proto)
  add_subdirectory(modules/storytelling/common)
  add_subdirectory(modules/audio/proto)
  add_subdirectory(modules/audio/tools)
  add_subdirectory(modules/audio/inference)
  add_subdirectory(modules/audio/common)
  add_subdirectory(modules/prediction/util)
  add_subdirectory(modules/prediction/scenario)
  add_subdirectory(modules/prediction/evaluator)
  add_subdirectory(modules/prediction/proto)
  add_subdirectory(modules/prediction/network)
  add_subdirectory(modules/prediction/pipeline)
  add_subdirectory(modules/prediction/submodules)
  add_subdirectory(modules/prediction/common)
  add_subdirectory(modules/prediction/predictor)
  add_subdirectory(modules/prediction/container)
  add_subdirectory(modules/prediction/scenario/prioritization)
  add_subdirectory(modules/prediction/scenario/scenario_features)
  add_subdirectory(modules/prediction/scenario/feature_extractor)
  add_subdirectory(modules/prediction/scenario/interaction_filter)
  add_subdirectory(modules/prediction/scenario/analyzer)
  add_subdirectory(modules/prediction/scenario/right_of_way)
  add_subdirectory(modules/prediction/evaluator/cyclist)
  add_subdirectory(modules/prediction/evaluator/vehicle)
  add_subdirectory(modules/prediction/evaluator/pedestrian)
  add_subdirectory(modules/prediction/network/rnn_model)
  add_subdirectory(modules/prediction/predictor/extrapolation)
  add_subdirectory(modules/prediction/predictor/interaction)
  add_subdirectory(modules/prediction/predictor/single_lane)
  add_subdirectory(modules/prediction/predictor/move_sequence)
  add_subdirectory(modules/prediction/predictor/sequence)
  add_subdirectory(modules/prediction/predictor/junction)
  add_subdirectory(modules/prediction/predictor/empty)
  add_subdirectory(modules/prediction/predictor/free_move)
  add_subdirectory(modules/prediction/predictor/lane_sequence)
  add_subdirectory(modules/prediction/container/storytelling)
  add_subdirectory(modules/prediction/container/adc_trajectory)
  add_subdirectory(modules/prediction/container/obstacles)
  add_subdirectory(modules/prediction/container/pose)
  add_subdirectory(modules/map/data)
  add_subdirectory(modules/map/hdmap)
  add_subdirectory(modules/map/proto)
  add_subdirectory(modules/map/pnc_map)
  add_subdirectory(modules/map/tools)
  add_subdirectory(modules/map/relative_map)
  add_subdirectory(modules/map/hdmap/adapter)
  add_subdirectory(modules/map/hdmap/adapter/xml_parser)
  add_subdirectory(modules/map/tools/map_datachecker/client)
  add_subdirectory(modules/map/tools/map_datachecker/proto)
  add_subdirectory(modules/map/tools/map_datachecker/server)
  add_subdirectory(modules/map/relative_map/proto)
  add_subdirectory(modules/map/relative_map/tools)
  add_subdirectory(modules/map/relative_map/common)
  add_subdirectory(modules/v2x/proto)
  add_subdirectory(modules/v2x/common)
  add_subdirectory(modules/v2x/fusion/configs)
  add_subdirectory(modules/v2x/fusion/apps)
  add_subdirectory(modules/v2x/fusion/libs/fusion)
  add_subdirectory(modules/v2x/fusion/libs/common)
  add_subdirectory(modules/v2x/fusion/apps/common)
  add_subdirectory(modules/v2x/v2x_proxy/app)
  add_subdirectory(modules/v2x/v2x_proxy/os_interface)
  add_subdirectory(modules/v2x/v2x_proxy/obu_interface)
  add_subdirectory(modules/v2x/v2x_proxy/obu_interface/grpc_interface)
  add_subdirectory(modules/routing/strategy)
  add_subdirectory(modules/routing/core)
  add_subdirectory(modules/routing/proto)
  add_subdirectory(modules/routing/tools)
  add_subdirectory(modules/routing/topo_creator)
  add_subdirectory(modules/routing/common)
  add_subdirectory(modules/routing/graph)
  add_subdirectory(modules/routing/tools/routing_tester)
  add_subdirectory(modules/task_manager/proto)
  add_subdirectory(modules/task_manager/common)
  add_subdirectory(modules/data/proto)
  add_subdirectory(modules/data/tools/smart_recorder)
  add_subdirectory(modules/data/tools/smart_recorder/proto)
  add_subdirectory(modules/transform/proto)
  add_subdirectory(modules/canbus/vehicle)
  add_subdirectory(modules/canbus/proto)
  add_subdirectory(modules/canbus/tools)
  add_subdirectory(modules/canbus/common)
  add_subdirectory(modules/canbus/vehicle/transit)
  add_subdirectory(modules/canbus/vehicle/gem)
  add_subdirectory(modules/canbus/vehicle/wey)
  add_subdirectory(modules/canbus/vehicle/ge3)
  add_subdirectory(modules/canbus/vehicle/zhongyun)
  add_subdirectory(modules/canbus/vehicle/devkit)
  add_subdirectory(modules/canbus/vehicle/lincoln)
  add_subdirectory(modules/canbus/vehicle/ch)
  add_subdirectory(modules/canbus/vehicle/lexus)
  add_subdirectory(modules/canbus/vehicle/neolix_edu)
  add_subdirectory(modules/localization/msf)
  add_subdirectory(modules/localization/proto)
  add_subdirectory(modules/localization/rtk)
  add_subdirectory(modules/localization/common)
  add_subdirectory(modules/localization/ndt)
  add_subdirectory(modules/localization/msf/local_integ)
  add_subdirectory(modules/localization/msf/params)
  add_subdirectory(modules/localization/msf/local_tool/data_extraction)
  add_subdirectory(modules/localization/msf/local_tool/map_creation)
  add_subdirectory(modules/localization/msf/local_tool/map_creation/poses_interpolation)
  add_subdirectory(modules/localization/msf/local_tool/local_visualization/online_visual)
  add_subdirectory(modules/localization/msf/local_tool/local_visualization/engine)
  add_subdirectory(modules/localization/msf/local_tool/local_visualization/offline_visual)
  add_subdirectory(modules/localization/msf/local_pyramid_map/ndt_map)
  add_subdirectory(modules/localization/msf/local_pyramid_map/pyramid_map)
  add_subdirectory(modules/localization/msf/local_pyramid_map/base_map)
  add_subdirectory(modules/localization/msf/local_map/lossy_map)
  add_subdirectory(modules/localization/msf/local_map/ndt_map)
  add_subdirectory(modules/localization/msf/local_map/base_map)
  add_subdirectory(modules/localization/msf/local_map/lossless_map)
  add_subdirectory(modules/localization/msf/common/util)
  add_subdirectory(modules/localization/msf/common/io)
  add_subdirectory(modules/localization/ndt/ndt_locator)
  add_subdirectory(modules/localization/ndt/map_creation)
  add_subdirectory(modules/tools/mock_routing)
  add_subdirectory(modules/tools/visualizer)
  add_subdirectory(modules/tools/dump_gpsbin)
  add_subdirectory(modules/tools/plot_control)
  add_subdirectory(modules/tools/mapshow)
  add_subdirectory(modules/tools/sensor_calibration)
  add_subdirectory(modules/tools/rosbag)
  add_subdirectory(modules/tools/restore_video_record)
  add_subdirectory(modules/tools/routing)
  add_subdirectory(modules/tools/record_analyzer)
  add_subdirectory(modules/tools/mobileye_viewer)
  add_subdirectory(modules/tools/navigator)
  add_subdirectory(modules/tools/vehicle_calibration)
  add_subdirectory(modules/tools/record_play)
  add_subdirectory(modules/tools/control_info)
  add_subdirectory(modules/tools/mapviewers)
  add_subdirectory(modules/tools/localization)
  add_subdirectory(modules/tools/record_parse_save)
  add_subdirectory(modules/tools/map_gen)
  add_subdirectory(modules/tools/replay)
  add_subdirectory(modules/tools/plot_trace)
  add_subdirectory(modules/tools/open_space_visualization)
  add_subdirectory(modules/tools/manual_traffic_light)
  add_subdirectory(modules/tools/perception)
  add_subdirectory(modules/tools/common)
  add_subdirectory(modules/tools/realtime_plot)
  add_subdirectory(modules/tools/create_map)
  add_subdirectory(modules/tools/plot_planning)
  add_subdirectory(modules/tools/mapshow/libs)
  add_subdirectory(modules/tools/sensor_calibration/proto)
  add_subdirectory(modules/tools/prediction/multiple_gpu_estimator)
  add_subdirectory(modules/tools/prediction/fake_prediction)
  add_subdirectory(modules/tools/prediction/data_pipelines)
  add_subdirectory(modules/tools/prediction/data_pipelines/data_preprocessing)
  add_subdirectory(modules/tools/prediction/data_pipelines/proto)
  add_subdirectory(modules/tools/prediction/data_pipelines/common)
  add_subdirectory(modules/tools/record_analyzer/tools)
  add_subdirectory(modules/tools/record_analyzer/common)
  add_subdirectory(modules/tools/record_analyzer/metrics)
  add_subdirectory(modules/tools/navigator/dbmap)
  add_subdirectory(modules/tools/navigator/dbmap/libs)
  add_subdirectory(modules/tools/navigator/dbmap/proto)
  add_subdirectory(modules/tools/navigation/config)
  add_subdirectory(modules/tools/navigation/driving_behavior)
  add_subdirectory(modules/tools/navigation/planning)
  add_subdirectory(modules/tools/planning/plot_trajectory)
  add_subdirectory(modules/tools/planning/plot_trajectory/example_data)
  add_subdirectory(modules/bridge/test)
  add_subdirectory(modules/bridge/proto)
  add_subdirectory(modules/bridge/common)
  add_subdirectory(modules/perception/production)
  add_subdirectory(modules/perception/data)
  add_subdirectory(modules/perception/testdata)
  add_subdirectory(modules/perception/proto)
  add_subdirectory(modules/perception/base)
  add_subdirectory(modules/perception/inference)
  add_subdirectory(modules/perception/common)
  add_subdirectory(modules/perception/radar/app)
  add_subdirectory(modules/perception/radar/common)
  add_subdirectory(modules/perception/radar/lib/interface)
  add_subdirectory(modules/perception/radar/lib/dummy)
  add_subdirectory(modules/perception/radar/lib/detector/conti_ars_detector)
  add_subdirectory(modules/perception/radar/lib/preprocessor/conti_ars_preprocessor)
  add_subdirectory(modules/perception/radar/lib/tracker/filter)
  add_subdirectory(modules/perception/radar/lib/tracker/conti_ars_tracker)
  add_subdirectory(modules/perception/radar/lib/tracker/matcher)
  add_subdirectory(modules/perception/radar/lib/tracker/common)
  add_subdirectory(modules/perception/radar/lib/roi_filter/hdmap_radar_roi_filter)
  add_subdirectory(modules/perception/lib/thread)
  add_subdirectory(modules/perception/lib/config_manager)
  add_subdirectory(modules/perception/lib/registerer)
  add_subdirectory(modules/perception/map/hdmap)
  add_subdirectory(modules/perception/fusion/app)
  add_subdirectory(modules/perception/fusion/base)
  add_subdirectory(modules/perception/fusion/common)
  add_subdirectory(modules/perception/fusion/lib/interface)
  add_subdirectory(modules/perception/fusion/lib/dummy)
  add_subdirectory(modules/perception/fusion/lib/fusion_system/probabilistic_fusion)
  add_subdirectory(modules/perception/fusion/lib/data_fusion/motion_fusion/kalman_motion_fusion)
  add_subdirectory(modules/perception/fusion/lib/data_fusion/existence_fusion/dst_existence_fusion)
  add_subdirectory(modules/perception/fusion/lib/data_fusion/tracker/pbf_tracker)
  add_subdirectory(modules/perception/fusion/lib/data_fusion/shape_fusion/pbf_shape_fusion)
  add_subdirectory(modules/perception/fusion/lib/data_fusion/type_fusion/dst_type_fusion)
  add_subdirectory(modules/perception/fusion/lib/gatekeeper/pbf_gatekeeper)
  add_subdirectory(modules/perception/fusion/lib/gatekeeper/pbf_gatekeeper/proto)
  add_subdirectory(modules/perception/fusion/lib/data_association/hm_data_association)
  add_subdirectory(modules/perception/tool/benchmark/lidar)
  add_subdirectory(modules/perception/tool/benchmark/lidar/util)
  add_subdirectory(modules/perception/tool/benchmark/lidar/ctpl)
  add_subdirectory(modules/perception/tool/benchmark/lidar/loader)
  add_subdirectory(modules/perception/tool/benchmark/lidar/base)
  add_subdirectory(modules/perception/tool/benchmark/lidar/eval)
  add_subdirectory(modules/perception/lidar/app)
  add_subdirectory(modules/perception/lidar/tools)
  add_subdirectory(modules/perception/lidar/common)
  add_subdirectory(modules/perception/lidar/app/proto)
  add_subdirectory(modules/perception/lidar/lib/pointcloud_preprocessor)
  add_subdirectory(modules/perception/lidar/lib/object_builder)
  add_subdirectory(modules/perception/lidar/lib/scene_manager)
  add_subdirectory(modules/perception/lidar/lib/object_filter_bank)
  add_subdirectory(modules/perception/lidar/lib/map_manager)
  add_subdirectory(modules/perception/lidar/lib/interface)
  add_subdirectory(modules/perception/lidar/lib/dummy)
  add_subdirectory(modules/perception/lidar/lib/classifier/fused_classifier)
  add_subdirectory(modules/perception/lidar/lib/detector/mask_pillars_detection)
  add_subdirectory(modules/perception/lidar/lib/detector/ncut_segmentation)
  add_subdirectory(modules/perception/lidar/lib/detector/point_pillars_detection)
  add_subdirectory(modules/perception/lidar/lib/detector/cnn_segmentation)
  add_subdirectory(modules/perception/lidar/lib/detector/ncut_segmentation/proto)
  add_subdirectory(modules/perception/lidar/lib/detector/ncut_segmentation/common)
  add_subdirectory(modules/perception/lidar/lib/detector/ncut_segmentation/common/graph_felzenszwalb)
  add_subdirectory(modules/perception/lidar/lib/detector/cnn_segmentation/spp_engine)
  add_subdirectory(modules/perception/lidar/lib/detector/cnn_segmentation/proto)
  add_subdirectory(modules/perception/lidar/lib/pointcloud_preprocessor/proto)
  add_subdirectory(modules/perception/lidar/lib/scene_manager/ground_service)
  add_subdirectory(modules/perception/lidar/lib/scene_manager/proto)
  add_subdirectory(modules/perception/lidar/lib/scene_manager/roi_service)
  add_subdirectory(modules/perception/lidar/lib/scene_manager/ground_service/proto)
  add_subdirectory(modules/perception/lidar/lib/scene_manager/roi_service/proto)
  add_subdirectory(modules/perception/lidar/lib/object_filter_bank/proto)
  add_subdirectory(modules/perception/lidar/lib/object_filter_bank/roi_boundary_filter)
  add_subdirectory(modules/perception/lidar/lib/ground_detector/ground_service_detector)
  add_subdirectory(modules/perception/lidar/lib/ground_detector/spatio_temporal_ground_detector)
  add_subdirectory(modules/perception/lidar/lib/ground_detector/ground_service_detector/proto)
  add_subdirectory(modules/perception/lidar/lib/ground_detector/spatio_temporal_ground_detector/proto)
  add_subdirectory(modules/perception/lidar/lib/tracker/multi_lidar_fusion)
  add_subdirectory(modules/perception/lidar/lib/tracker/association)
  add_subdirectory(modules/perception/lidar/lib/tracker/measurement)
  add_subdirectory(modules/perception/lidar/lib/tracker/common)
  add_subdirectory(modules/perception/lidar/lib/tracker/semantic_map)
  add_subdirectory(modules/perception/lidar/lib/tracker/multi_lidar_fusion/proto)
  add_subdirectory(modules/perception/lidar/lib/roi_filter/hdmap_roi_filter)
  add_subdirectory(modules/perception/lidar/lib/roi_filter/roi_service_filter)
  add_subdirectory(modules/perception/lidar/lib/roi_filter/hdmap_roi_filter/proto)
  add_subdirectory(modules/perception/lidar/tools/exporter)
  add_subdirectory(modules/perception/base/test)
  add_subdirectory(modules/perception/inference/onnx)
  add_subdirectory(modules/perception/inference/caffe)
  add_subdirectory(modules/perception/inference/tensorrt)
  add_subdirectory(modules/perception/inference/operators)
  add_subdirectory(modules/perception/inference/utils)
  add_subdirectory(modules/perception/inference/tools)
  add_subdirectory(modules/perception/inference/libtorch)
  add_subdirectory(modules/perception/inference/tensorrt/plugins)
  add_subdirectory(modules/perception/common/image_processing)
  add_subdirectory(modules/perception/common/geometry)
  add_subdirectory(modules/perception/common/i_lib)
  add_subdirectory(modules/perception/common/graph)
  add_subdirectory(modules/perception/common/point_cloud_processing)
  add_subdirectory(modules/perception/common/sensor_manager)
  add_subdirectory(modules/perception/common/io)
  add_subdirectory(modules/perception/common/i_lib/da)
  add_subdirectory(modules/perception/common/i_lib/core)
  add_subdirectory(modules/perception/common/i_lib/geometry)
  add_subdirectory(modules/perception/common/i_lib/algorithm)
  add_subdirectory(modules/perception/common/i_lib/pc)
  add_subdirectory(modules/perception/camera/app)
  add_subdirectory(modules/perception/camera/test)
  add_subdirectory(modules/perception/camera/proto)
  add_subdirectory(modules/perception/camera/common)
  add_subdirectory(modules/perception/camera/app/proto)
  add_subdirectory(modules/perception/camera/lib/motion)
  add_subdirectory(modules/perception/camera/lib/interface)
  add_subdirectory(modules/perception/camera/lib/dummy)
  add_subdirectory(modules/perception/camera/lib/motion_service)
  add_subdirectory(modules/perception/camera/lib/feature_extractor/tfe)
  add_subdirectory(modules/perception/camera/lib/feature_extractor/tfe/proto)
  add_subdirectory(modules/perception/camera/lib/calibration_service/online_calibration_service)
  add_subdirectory(modules/perception/camera/lib/lane/common)
  add_subdirectory(modules/perception/camera/lib/lane/detector/darkSCNN)
  add_subdirectory(modules/perception/camera/lib/lane/detector/denseline)
  add_subdirectory(modules/perception/camera/lib/lane/postprocessor/darkSCNN)
  add_subdirectory(modules/perception/camera/lib/lane/postprocessor/proto)
  add_subdirectory(modules/perception/camera/lib/lane/postprocessor/denseline)
  add_subdirectory(modules/perception/camera/lib/lane/postprocessor/darkSCNN/proto)
  add_subdirectory(modules/perception/camera/lib/lane/postprocessor/denseline/proto)
  add_subdirectory(modules/perception/camera/lib/lane/common/proto)
  add_subdirectory(modules/perception/camera/lib/calibrator/common)
  add_subdirectory(modules/perception/camera/lib/calibrator/laneline)
  add_subdirectory(modules/perception/camera/lib/obstacle/detector/yolov4)
  add_subdirectory(modules/perception/camera/lib/obstacle/detector/yolo)
  add_subdirectory(modules/perception/camera/lib/obstacle/detector/smoke)
  add_subdirectory(modules/perception/camera/lib/obstacle/detector/smoke/proto)
  add_subdirectory(modules/perception/camera/lib/obstacle/postprocessor/location_refiner)
  add_subdirectory(modules/perception/camera/lib/obstacle/postprocessor/location_refiner/proto)
  add_subdirectory(modules/perception/camera/lib/obstacle/tracker/common)
  add_subdirectory(modules/perception/camera/lib/obstacle/tracker/omt)
  add_subdirectory(modules/perception/camera/lib/obstacle/tracker/omt/proto)
  add_subdirectory(modules/perception/camera/lib/obstacle/transformer/multicue)
  add_subdirectory(modules/perception/camera/lib/obstacle/transformer/singlestage)
  add_subdirectory(modules/perception/camera/lib/obstacle/transformer/multicue/proto)
  add_subdirectory(modules/perception/camera/lib/obstacle/transformer/singlestage/proto)
  add_subdirectory(modules/perception/camera/lib/traffic_light/preprocessor)
  add_subdirectory(modules/perception/camera/lib/traffic_light/proto)
  add_subdirectory(modules/perception/camera/lib/traffic_light/tracker)
  add_subdirectory(modules/perception/camera/lib/traffic_light/detector/detection)
  add_subdirectory(modules/perception/camera/lib/traffic_light/detector/recognition)
  add_subdirectory(modules/perception/camera/lib/traffic_light/detector/recognition/proto)
  add_subdirectory(modules/perception/camera/lib/traffic_light/preprocessor/proto)
  add_subdirectory(modules/perception/camera/lib/traffic_light/tracker/proto)
  add_subdirectory(modules/perception/camera/tools/lane_detection)
  add_subdirectory(modules/perception/camera/tools/obstacle_detection)
  add_subdirectory(modules/perception/camera/tools/offline)
  add_subdirectory(modules/perception/camera/common/proto)
  add_subdirectory(modules/perception/onboard/common_flags)
  add_subdirectory(modules/perception/onboard/msg_serializer)
  add_subdirectory(modules/perception/onboard/proto)
  add_subdirectory(modules/perception/onboard/component)
  add_subdirectory(modules/perception/onboard/transform_wrapper)
  add_subdirectory(modules/perception/onboard/msg_buffer)
  add_subdirectory(modules/perception/onboard/inner_component_messages)
  add_subdirectory(modules/drivers/radar)

  add_subdirectory(modules/drivers/proto)

  add_subdirectory(modules/drivers/lidar)
  add_subdirectory(modules/drivers/microphone)
  add_subdirectory(modules/drivers/canbus)
  add_subdirectory(modules/drivers/video)
  add_subdirectory(modules/drivers/camera)
  add_subdirectory(modules/drivers/smartereye)
  add_subdirectory(modules/drivers/gnss)
  add_subdirectory(modules/drivers/radar/conti_radar)
  add_subdirectory(modules/drivers/radar/racobit_radar)
  add_subdirectory(modules/drivers/radar/ultrasonic_radar)
  add_subdirectory(modules/drivers/radar/conti_radar/proto)
  add_subdirectory(modules/drivers/radar/racobit_radar/proto)
  add_subdirectory(modules/drivers/radar/ultrasonic_radar/proto)
  add_subdirectory(modules/drivers/lidar/hesai)
  add_subdirectory(modules/drivers/lidar/velodyne)

  add_subdirectory(modules/drivers/lidar/proto)

  add_subdirectory(modules/drivers/lidar/robosense)
  add_subdirectory(modules/drivers/lidar/hesai/driver)
  add_subdirectory(modules/drivers/lidar/velodyne/fusion)
  add_subdirectory(modules/drivers/lidar/velodyne/compensator)
  add_subdirectory(modules/drivers/lidar/velodyne/parser)
  add_subdirectory(modules/drivers/lidar/velodyne/driver)
  add_subdirectory(modules/drivers/lidar/robosense/input)
  add_subdirectory(modules/drivers/lidar/robosense/driver)
  add_subdirectory(modules/drivers/lidar/common/driver_factory)
  add_subdirectory(modules/drivers/microphone/proto)
  add_subdirectory(modules/drivers/canbus/proto)
  add_subdirectory(modules/drivers/canbus/can_comm)
  add_subdirectory(modules/drivers/canbus/common)
  add_subdirectory(modules/drivers/canbus/can_client)
  add_subdirectory(modules/drivers/canbus/can_client/esd)
  add_subdirectory(modules/drivers/canbus/can_client/fake)
  add_subdirectory(modules/drivers/canbus/can_client/socket)
  add_subdirectory(modules/drivers/canbus/can_client/hermes_can)
  add_subdirectory(modules/drivers/tools/image_decompress)
  add_subdirectory(modules/drivers/tools/image_decompress/proto)
  add_subdirectory(modules/drivers/video/proto)
  add_subdirectory(modules/drivers/video/tools/decode_video)
  add_subdirectory(modules/drivers/camera/proto)
  add_subdirectory(modules/drivers/smartereye/proto)
  add_subdirectory(modules/drivers/gnss/util)
  add_subdirectory(modules/drivers/gnss/stream)
  add_subdirectory(modules/drivers/gnss/test)
  add_subdirectory(modules/drivers/gnss/proto)
  add_subdirectory(modules/drivers/gnss/parser)
  add_subdirectory(modules/common/monitor_log)
  add_subdirectory(modules/common/vehicle_state)
  add_subdirectory(modules/common/util)
  add_subdirectory(modules/common/latency_recorder)
  add_subdirectory(modules/common/adapters)
  add_subdirectory(modules/common/status)
  add_subdirectory(modules/common/configs)
  add_subdirectory(modules/common/data)
  add_subdirectory(modules/common/math)
  add_subdirectory(modules/common/kv_db)
  add_subdirectory(modules/common/proto)
  add_subdirectory(modules/common/vehicle_model)
  add_subdirectory(modules/common/filters)
  add_subdirectory(modules/common/monitor_log/proto)
  add_subdirectory(modules/common/vehicle_state/proto)
  add_subdirectory(modules/common/util/testdata)
  add_subdirectory(modules/common/latency_recorder/proto)
  add_subdirectory(modules/common/adapters/proto)
  add_subdirectory(modules/common/configs/proto)
  add_subdirectory(modules/common/math/qp_solver)
  add_subdirectory(modules/common/vehicle_model/proto)
  add_subdirectory(modules/guardian/proto)
  add_subdirectory(modules/monitor/proto)
  add_subdirectory(modules/monitor/software)
  add_subdirectory(modules/monitor/hardware)
  add_subdirectory(modules/monitor/common)
  add_subdirectory(modules/planning/planner)
  add_subdirectory(modules/planning/constraint_checker)
  add_subdirectory(modules/planning/reference_line)
  add_subdirectory(modules/planning/traffic_rules)
  add_subdirectory(modules/planning/math)
  add_subdirectory(modules/planning/tuning)
  add_subdirectory(modules/planning/proto)
  add_subdirectory(modules/planning/tools)
  add_subdirectory(modules/planning/pipeline)
  add_subdirectory(modules/planning/common)
  add_subdirectory(modules/planning/integration_tests)
  add_subdirectory(modules/planning/tasks)
  add_subdirectory(modules/planning/scenarios)
  add_subdirectory(modules/planning/planner/navi)
  add_subdirectory(modules/planning/planner/rtk)
  add_subdirectory(modules/planning/planner/lattice)
  add_subdirectory(modules/planning/planner/public_road)
  add_subdirectory(modules/planning/math/discretized_points_smoothing)
  add_subdirectory(modules/planning/math/smoothing_spline)
  add_subdirectory(modules/planning/math/curve1d)
  add_subdirectory(modules/planning/math/piecewise_jerk)
  add_subdirectory(modules/planning/tuning/speed_model)
  add_subdirectory(modules/planning/navi/decider)

  add_subdirectory(modules/planning/proto/math)

  add_subdirectory(modules/planning/open_space/tools)
  add_subdirectory(modules/planning/open_space/coarse_trajectory_generator)
  add_subdirectory(modules/planning/open_space/trajectory_smoother)
  add_subdirectory(modules/planning/learning_based/img_feature_renderer)
  add_subdirectory(modules/planning/learning_based/model_inference)
  add_subdirectory(modules/planning/common/util)
  add_subdirectory(modules/planning/common/trajectory)
  add_subdirectory(modules/planning/common/smoothers)
  add_subdirectory(modules/planning/common/speed)
  add_subdirectory(modules/planning/common/trajectory1d)
  add_subdirectory(modules/planning/common/path)
  add_subdirectory(modules/planning/tasks/utils)
  add_subdirectory(modules/planning/tasks/optimizers)
  add_subdirectory(modules/planning/tasks/deciders)
  add_subdirectory(modules/planning/tasks/learning_model)
  add_subdirectory(modules/planning/tasks/optimizers/piecewise_jerk_speed)
  add_subdirectory(modules/planning/tasks/optimizers/open_space_trajectory_generation)
  add_subdirectory(modules/planning/tasks/optimizers/path_time_heuristic)
  add_subdirectory(modules/planning/tasks/optimizers/piecewise_jerk_path)
  add_subdirectory(modules/planning/tasks/optimizers/open_space_trajectory_partition)
  add_subdirectory(modules/planning/tasks/deciders/rss_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_lane_borrow_decider)
  add_subdirectory(modules/planning/tasks/deciders/rule_based_stop_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_reuse_decider)
  add_subdirectory(modules/planning/tasks/deciders/open_space_decider)
  add_subdirectory(modules/planning/tasks/deciders/utils)
  add_subdirectory(modules/planning/tasks/deciders/st_bounds_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_reference_decider)
  add_subdirectory(modules/planning/tasks/deciders/speed_bounds_decider)
  add_subdirectory(modules/planning/tasks/deciders/speed_decider)
  add_subdirectory(modules/planning/tasks/deciders/lane_change_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_assessment_decider)
  add_subdirectory(modules/planning/tasks/deciders/path_bounds_decider)
  add_subdirectory(modules/planning/tasks/deciders/creep_decider)
  add_subdirectory(modules/planning/scenarios/yield_sign)
  add_subdirectory(modules/planning/scenarios/util)
  add_subdirectory(modules/planning/scenarios/lane_follow)
  add_subdirectory(modules/planning/scenarios/park_and_go)
  add_subdirectory(modules/planning/scenarios/narrow_street_u_turn)
  add_subdirectory(modules/planning/scenarios/common)
  add_subdirectory(modules/planning/scenarios/learning_model)
  add_subdirectory(modules/planning/scenarios/stop_sign/unprotected)
  add_subdirectory(modules/planning/scenarios/park/valet_parking)
  add_subdirectory(modules/planning/scenarios/park/pull_over)
  add_subdirectory(modules/planning/scenarios/bare_intersection/unprotected)
  add_subdirectory(modules/planning/scenarios/dead_end/deadend_turnaround)
  add_subdirectory(modules/planning/scenarios/emergency/emergency_stop)
  add_subdirectory(modules/planning/scenarios/emergency/emergency_pull_over)
  add_subdirectory(modules/planning/scenarios/traffic_light/protected)
  add_subdirectory(modules/planning/scenarios/traffic_light/unprotected_right_turn)
  add_subdirectory(modules/planning/scenarios/traffic_light/unprotected_left_turn)
  add_subdirectory(modules/planning/lattice/trajectory_generation)
  add_subdirectory(modules/planning/lattice/behavior)
  add_subdirectory(modules/contrib/cyber_bridge)
  add_subdirectory(modules/contrib/lgsvl_msgs/proto)
  add_subdirectory(modules/civetweb-1.11)
endif()
